Add 2d mhd shock_tube

--- a/apps/2d/mhd/shock_tube/parameters.ini
+++ b/apps/2d/mhd/shock_tube/parameters.ini
@@ -28,12 +28,12 @@ xlow  = -1.0e0 ; left end point
 xhigh =  1.0e0 ; right end point
 ylow  = -1.0e0
 yhigh =  1.0e0
-[mhdParams]
+[mhd]
 gamma = 1.666666666666667     ; gamma (gas constant)
 ; -------------------------------------------------
 ;  Initial condition parameters
 ; -------------------------------------------------
-[initialparams]
+[initial]
 rhol  =  1.0   ; density (on left side of jump)
 unl   = -0.4   ; normal velocity (on left side of jump)
 utl   =  0.0   ; transverse velocity (on left side of jump)
@@ -54,5 +54,3 @@ B3r   =  0.0   ; z-magnetic field (on left side of jump)
 ;
 ;angle = 0.52359877559 ; pi/6
 ;angle = 0.78539816339 ; pi/4
-angle = 1.57079632679 ; pi/2
- 
