Runge-Kutta with Constrained Transport.
- For 2D MHD Alfven
- Result is incorrect.  Most likely reason: A3 at boundary is set
  incorrectly.  The assert in BeforeStep.cpp, line 63 shows that A3
  value have been good, but it is clear from plot that the magnetic
  fields are very wrong at boundary.
- Debugging output is dumped to stderr, and can be dumped to a file
  by:  ./finess.exe 2>debug_output

--- a/apps/2d/mhd/rotated_alfven/Makefile
+++ b/apps/2d/mhd/rotated_alfven/Makefile
@@ -7,14 +7,22 @@ include $(FINESS)/lib/2d/Makefile.defs
 include $(FINESS)/apps/2d/mhd/lib/Makefile.defs
 
 # overridden library objects
+AfterQinit = AfterQinit
 BeforeStep = BeforeStep
 ConstructL = ConstructL
 UpdateSoln = UpdateSoln
 AfterStep = AfterStep
 
-ALL_OBJECTS = $(COMMON_OBJECTS)
+# Hamilton-Jacobi rhs for magnetic potential
+ConstructHJ_L = ConstructHJ_L
 
-ALL_SOURCES = $(COMMON_SOURCES)
+ALL_OBJECTS = $(COMMON_OBJECTS) \
+$(ConstructHJ_L).o
+
+ALL_SOURCES = $(COMMON_SOURCES) \
+$(ConstructHJ_L).cpp \
+$(ConstructHJ_L).h
+
 
 
 TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/mhd/lib/ $(LIB_SYS_INCLUDE)
