--- a/apps/2d/mhd/rotated_alfven/parameters.ini
+++ b/apps/2d/mhd/rotated_alfven/parameters.ini
@@ -2,7 +2,7 @@
 [finess]
 ndims       = 2         ; 1, 2, or 3
 nout        = 10         ; number of output times to print results
-tfinal      = 1.0	; final time
+tfinal      = 0.1	; final time
 initial_dt      = 0.000008  ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 1.00      ; max allowable Courant number 1/(2k-1)
@@ -11,10 +11,10 @@ nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 ;time_stepping_method = Multiderivative ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5  ; order of accuracy in space
-time_order  = 4  ; order of accuracy in time
+time_order  = 3  ; order of accuracy in time
 verbosity   = 1  ; verbosity of output
 mcapa       = 0  ; mcapa (capacity function index in aux arrays)
-maux        = 0  ; maux (number of aux arrays, maux >= mcapa)
+maux        = 1  ; maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; source term (1-yes, 0-no)
 meqn        = 8  ; number of equations
 ;;mrestart    = 0  ; restart from old data (1-yes, 0-no)
@@ -23,7 +23,7 @@ meqn        = 8  ; number of equations
 [grid]
 mx    =  128   ; number of grid elements in x-direction
 ;my    =  mx
-mbc   =  5     ; number of ghost cells on each boundary
+mbc   =  5      ; number of ghost cells on each boundary
 ;xlow  =  0 ; left end point
 ;xhigh =  1 / cos(initial.angle) ; right end point
 ;ylow  =  0
@@ -34,8 +34,8 @@ gamma = 1.6666666666666667   ; gamma (gas constant)
 ;  Initial condition parameters
 ; -------------------------------------------------
 [initial]
-angle = 0.52359877559 ; pi/6
-;angle = 0.78539816339 ; pi/4
+;angle = 0.52359877559 ; pi/6
+angle = 0.78539816339 ; pi/4
 ;angle = 1.57079632679 ; pi/2
 ;angle = 0
-;ngle = 0.1
+;angle = 0.01
