--- a/config/Makefile.config
+++ b/config/Makefile.config
@@ -38,7 +38,7 @@ USE_H5CPP = 0
 # LINK = time g++ -ggdb -DCHECK_BOUNDS
 
 #LINK = time g++ -O4
-LINK = time g++ -O4 -fopenmp -lgomp
+LINK = time g++ -O2 -g # -fopenmp -lgomp
 
 #LINK = time g++-4.7 -ggdb
 
