--- a/lib/2d/Makefile.defs
+++ b/lib/2d/Makefile.defs
@@ -78,6 +78,7 @@ SOURCES_EXPECTED = \
 #
 RunFinpack           = $(LIB2D)/RunFinpack
 Output               = $(LIB2D)/Output
+WriteQhelp           = $(LIB2D)/WriteQhelp
 ConSoln              = $(LIB2D)/ConSoln
 AfterQinit           = $(LIB2D)/AfterQinit
 AfterStep            = $(LIB2D)/AfterStep
@@ -108,6 +109,7 @@ LIB2D_OBJECTS = \
   $(GridSetup).o \
   $(SampleFunction).o \
   $(Output).o \
+  $(WriteQhelp).o \
   $(ConSoln).o \
   $(FinSolveRK).o \
   $(FinSolveLxW).o \
@@ -135,6 +137,7 @@ LIB2D_SOURCES = \
   $(GridSetup).cpp \
   $(SampleFunction).cpp \
   $(Output).cpp \
+  $(WriteQhelp).cpp \
   $(ConSoln).cpp \
   $(FinSolveRK).cpp \
   $(FinSolveLxW).cpp \
