--- a/apps/2d/euler/mach_reflection/parameters.ini
+++ b/apps/2d/euler/mach_reflection/parameters.ini
@@ -1,12 +1,12 @@
-; Parameters common to dogpack applications
+; Parameters common to FINESS applications
 [finess]
 ndims       = 2         ; 1, 2, or 3
 nout        = 10        ; number of output times to print results
 tfinal      = 0.2       ; final time
-initial_dt      = 0.00001   ; initial dt
+initial_dt  = 0.00001   ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 0.30      ; max allowable Courant number 1/(2k-1)
-desired_cfl     = 0.25      ; desired Courant number
+desired_cfl = 0.25      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
 space_order = 5  ; =method(1)= order of accuracy in space
@@ -16,17 +16,14 @@ mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
 maux        = 0  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; =method(7)= source term (1-yes, 2-no)
 meqn        = 5  ; number of equations
-;mrestart    = 0  ; restart from old data (1-yes, 0-no)
-;;nstart      = 0  ; if ;mrestart==1: from file q(nstart)_restart.dat
-;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
-ic_quad_order = 20  ; order of quadrature for L2-projection of initial conditions
+
 ; -------------------------------------------------
-;   Cartesian grid data (ignored if Unstructured)
+;   Grid data
 ; -------------------------------------------------
 [grid]
 mx    = 200 	; number of grid elements in x-direction
 my    =  50      ; number of grid elements in y-direction
-mbc   = 3       ; number of ghost cells on each boundary
+mbc   = 5       ; number of ghost cells on each boundary
 xlow  = 0.0e0   ; left end point
 xhigh = 3.2e0   ; right end point
 ylow  = 0.0e0   ; lower end point
