--- a/apps/2d/shallow_water/riemann_test/parameters.ini
+++ b/apps/2d/shallow_water/riemann_test/parameters.ini
@@ -1,27 +1,23 @@
-; Parameters common to dogpack applications
+; Parameters common to FINESS applications
 [finess]
 ndims       = 2          ; 1, 2, or 3
 nout        = 10         ; number of output times to print results
 tfinal      = 0.2        ; final time
-initial_dt     = 0.001      ; initial dt
+initial_dt  = 0.001      ; initial dt
 max_dt      = 1.0e10     ; max allowable dt 
 max_cfl     = 0.50       ; max allowable Courant number 1/(2k-1)
-desired_cfl     = 0.40       ; desired Courant number
+desired_cfl = 0.40       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-;time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order =11   ; =method(1)= order of accuracy in space
-time_order  = 3   ; =method(2)= order of accuracy in time
-verbosity   = 1   ; =method(4)= verbosity of output
-mcapa       = 0   ; =method(5)= mcapa (capacity function index in aux arrays)
-maux        = 3   ; =method(6)= maux (number of aux arrays, maux >= mcapa)
-source_term = true   ; =method(7)= source term (1-yes, 0-no)
+space_order = 11  ; order of accuracy in space
+time_order  = 3   ; order of accuracy in time
+verbosity   = 1   ; verbosity of output
+mcapa       = 0   ; mcapa (capacity function index in aux arrays)
+maux        = 3   ; maux (number of aux arrays, maux >= mcapa)
+source_term = false ; source term (1-yes, 0-no)
 meqn        = 3   ; number of equations
-;mrestart    = 0   ; restart from old data (1-yes, 0-no)
-;;nstart      = 0   ; if ;mrestart==1: from file q(nstart)_restart.dat
-;datafmt     = 1   ; 1 for ascii, 5 for hdf5.
 ; -------------------------------------------------
-;   Cartesian grid data (ignored if Unstructured)
+;   Grid data
 ; -------------------------------------------------
 [grid]
 mx    =   200    ; number of grid elements in x-direction
