--- a/apps/2d/mhd/rotated_alfven/parameters2.ini
+++ b/apps/2d/mhd/rotated_alfven/parameters2.ini
@@ -1,7 +1,8 @@
 ; Parameters common to dogpack applications
 [finess]
+output_dir = output2
 ndims       = 2         ; 1, 2, or 3
-nout        = 10         ; number of output times to print results
+nout        = 100         ; number of output times to print results
 tfinal      = 1.0	; final time
 initial_dt      = 0.1  ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
@@ -11,7 +12,7 @@ nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 ;time_stepping_method = Multiderivative ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5  ; order of accuracy in space
-time_order  = 2  ; order of accuracy in time
+time_order  = 3  ; order of accuracy in time
 verbosity   = 1  ; verbosity of output
 mcapa       = 0  ; mcapa (capacity function index in aux arrays)
 maux        = 1  ; maux (number of aux arrays, maux >= mcapa)
