3D Euler application now compiles

--- a/apps/1d/advection/smooth_example/parameters.ini
+++ b/apps/1d/advection/smooth_example/parameters.ini
@@ -2,12 +2,12 @@
 ; Parameters common to FINESS applications
 [finess]
 ndims       = 1          ; 1, 2, or 3
-nout        = 1          ; number of output times to print results
-tfinal      = 0.200000   ; final time
+nout        = 10         ; number of output times to print results
+tfinal      = 1.0        ; final time
 initial_dt  = 1.0        ; initial dt
 max_dt      = 1.0e10     ; max allowable dt 
 max_cfl     = 1.0        ; max allowable Courant number
-desired_cfl = 0.600000    ; desired Courant number
+desired_cfl = 0.600000   ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5   ; order of accuracy in space 
@@ -17,12 +17,12 @@ mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 1   ; maux (number of aux arrays, maux >= mcapa)
 source_term = false   ; source term (true or false)
 meqn        = 1   ; number of equations
-output_dir  = output0100 ; location of the output directory
+output_dir  = output ; location of the output directory
 
 [grid]
 mx    = 200  ; number of grid elements in x-direction
 mbc   = 3     ; number of ghost cells on each boundary
-xlow  = -1.0e0   ; left end point
+xlow  =  0.0e0   ; left end point
 xhigh =  1.0e0   ; right end point
 
 [weno]
