Fixed FinSolveMD and a handful of 1D scripts

--- a/apps/1d/advection/smooth_example/Makefile
+++ b/apps/1d/advection/smooth_example/Makefile
@@ -10,8 +10,8 @@ include $(FINESS)/apps/1d/advection/lib/Makefile.defs
 #
 # overridden library objects
 #
-FinSolveUser           = $(FINESS)/lib/1d/FinSolveRK_PIF
-ConstructIntegratedF   = ConstructIntegratedF
+#FinSolveUser           = $(FINESS)/lib/1d/FinSolveRK_PIF
+#ConstructIntegratedF   = ConstructIntegratedF
 
 # place to add object modules
 #
