Move call to ConstructHJ_L to FinSolveRK
- This version gives expected order of accuracy
- Thus FinSolveRK must be overridden
- And certainly the boundary values on magnetic potential have been
  set correctly.

--- a/apps/2d/mhd/rotated_alfven/Makefile
+++ b/apps/2d/mhd/rotated_alfven/Makefile
@@ -7,6 +7,8 @@ include $(FINESS)/lib/2d/Makefile.defs
 include $(FINESS)/apps/2d/mhd/lib/Makefile.defs
 
 # overridden library objects
+FinSolveRK = FinSolveRK
+
 AfterQinit = AfterQinit
 BeforeStep = BeforeStep
 ConstructL = ConstructL
