Add constrained transport to rotated shock tube.

--- a/apps/2d/mhd/rotated_shock_tube/Makefile
+++ b/apps/2d/mhd/rotated_shock_tube/Makefile
@@ -7,11 +7,22 @@ include $(FINESS)/lib/2d/Makefile.defs
 include $(FINESS)/apps/2d/mhd/lib/Makefile.defs
 
 # overridden library objects
-#
+FinSolveRK = FinSolveRK
 
-ALL_OBJECTS = $(COMMON_OBJECTS)
+AfterQinit = AfterQinit
+UpdateSoln = UpdateSoln
+AfterStep = AfterStep
 
-ALL_SOURCES = $(COMMON_SOURCES)
+# Hamilton-Jacobi rhs for magnetic potential
+ConstructHJ_L = ConstructHJ_L
+
+ALL_OBJECTS = $(COMMON_OBJECTS) \
+$(ConstructHJ_L).o
+
+ALL_SOURCES = $(COMMON_SOURCES) \
+$(ConstructHJ_L).cpp \
+$(ConstructHJ_L).h
+
 
 
 TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/mhd/lib/ $(LIB_SYS_INCLUDE)
