--- a/apps/2d/mhd/rotated_shock_tube/parameters.ini
+++ b/apps/2d/mhd/rotated_shock_tube/parameters.ini
@@ -1,25 +1,25 @@
-; Parameters common to dogpack applications
 [finess]
-ndims       = 2         ; 1, 2, or 3
-nout        = 60         ; number of output times to print results
-tfinal      = 0.18	; final time
-initial_dt      = 0.1 ; initial dt
-max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 1.00      ; max allowable Courant number 1/(2k-1)
-desired_cfl     = 0.70      ; desired Courant number
-nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-;time_stepping_method = Multiderivative ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5  ; =method(1)= order of accuracy in space
-time_order  = 3  ; =method(2)= order of accuracy in time
-verbosity   = 1  ; =method(4)= verbosity of output
-mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
-maux        = 1  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
-source_term = false  ; =method(7)= source term (1-yes, 0-no)
-meqn        = 8  ; number of equations
-;;mrestart    = 0  ; restart from old data (1-yes, 0-no)
-;;;nstart      = 0  ; if ;mrestart==1: from file q(nstart)_restart.dat
-;;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
+initial_dt = 0.001 
+space_order = 5
+mcapa = 0
+time_order = 3
+max_dt = 10000000000
+desired_cfl = 0.7
+verbosity = 1
+meqn = 8
+time_stepping_method = Runge-Kutta
+output_dir = output
+maux = 1
+max_cfl = 0.7
+ndims = 2
+source_term = false
+tfinal = 0.2
+nout = 1
+nv = 500000
+
+[mhd]
+gamma = 1.6666666666666667
+
 [grid]
 mx    =  180   ; number of grid elements in x-direction
 my    =  150
@@ -28,8 +28,6 @@ xlow  = -1.2e0 ; left end point
 xhigh =  1.2e0 ; right end point
 ylow  = -1.0e0
 yhigh =  1.0e0
-[mhd]
-gamma = 1.6666666666666667   ; gamma (gas constant)
 ; -------------------------------------------------
 ;  Initial condition parameters
 ; -------------------------------------------------
