Add first order temporal derivative for A3.

--- a/apps/2d/mhd/rotated_alfven/Makefile
+++ b/apps/2d/mhd/rotated_alfven/Makefile
@@ -8,6 +8,7 @@ include $(FINESS)/apps/2d/mhd/lib/Makefile.defs
 
 # overridden library objects
 FinSolveRK = FinSolveRK
+FinSolveLxW = FinSolveLxW
 
 AfterQinit = AfterQinit
 UpdateSoln = UpdateSoln
