--- a/apps/2d/mhd/rotated_alfven/Makefile
+++ b/apps/2d/mhd/rotated_alfven/Makefile
@@ -7,25 +7,12 @@ include $(FINESS)/lib/2d/Makefile.defs
 include $(FINESS)/apps/2d/mhd/lib/Makefile.defs
 
 # overridden library objects
-FinSolveRK = FinSolveRK
-FinSolveLxW = FinSolveLxW
-
 AfterQinit = AfterQinit
-UpdateSoln = UpdateSoln
-AfterStep = AfterStep
-GetCFL = GetCFL
-
 # Hamilton-Jacobi rhs for magnetic potential
-ConstructHJ_L = ConstructHJ_L
 
-ALL_OBJECTS = $(COMMON_OBJECTS) \
-$(ConstructHJ_L).o
+ALL_OBJECTS = $(COMMON_OBJECTS) 
 
-ALL_SOURCES = $(COMMON_SOURCES) \
-$(ConstructHJ_L).cpp \
-$(ConstructHJ_L).h
-
-
+ALL_SOURCES = $(COMMON_SOURCES)
 
 TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/2d/mhd/lib/ $(LIB_SYS_INCLUDE)
 
