--- a/apps/2d/euler/lib/Makefile.defs
+++ b/apps/2d/euler/lib/Makefile.defs
@@ -31,6 +31,9 @@ AuxFunc             = $(APP_LIB)/AuxFunc
 # Lax-Friedrichs solver
 ConstructLF         = $(APP_LIB)/ConstructLF
 
+# Positivity-preserving limiter
+ApplyMPPLimiter2D   = $(APP_LIB)/ApplyMPPLimiter2D
+
 # place to add objects and sources
 #
 APP_LIB_OBJECTS = \
