--- a/lib/1d/Makefile.defs
+++ b/lib/1d/Makefile.defs
@@ -85,8 +85,7 @@ AfterQinit           = $(LIB1D)/AfterQinit
 AfterStep            = $(LIB1D)/AfterStep
 BeforeStep           = $(LIB1D)/BeforeStep
 AfterUpdateSoln      = $(LIB1D)/AfterUpdateSoln
-ApplyLimiter         = $(LIB1D)/ApplyLimiter
-ApplyPosLimiter      = $(LIB1D)/ApplyPosLimiter
+ApplyMPPLimiter1D    = $(LIB1D)/ApplyMPPLimiter1D
 ConstructL           = $(LIB1D)/ConstructL
 ConstructLxWL        = $(LIB1D)/ConstructLxWL
 BeforeFullTimeStep   = $(LIB1D)/BeforeFullTimeStep
@@ -139,8 +138,7 @@ LIB1D_OBJECTS = \
   $(BeforeFullTimeStep).o \
   $(AfterFullTimeStep).o \
   $(AfterUpdateSoln).o \
-  $(ApplyLimiter).o \
-  $(ApplyPosLimiter).o \
+  $(ApplyMPPLimiter1D).o \
   $(LIB1D)/ConvertQtoW.o \
   $(LIB1D)/ConvertWtoQ.o \
   $(ConstructL).o \
@@ -177,8 +175,7 @@ LIB1D_SOURCES = \
   $(BeforeFullTimeStep).cpp \
   $(AfterFullTimeStep).cpp \
   $(AfterUpdateSoln).cpp \
-  $(ApplyLimiter).cpp \
-  $(ApplyPosLimiter).cpp \
+  $(ApplyMPPLimiter1D).cpp \
   $(LIB1D)/ConvertQtoW.cpp \
   $(LIB1D)/ConvertWtoQ.cpp \
   $(ConstructL).cpp \
