--- a/config/Makefile.config
+++ b/config/Makefile.config
@@ -32,15 +32,7 @@ USE_H5CPP = 0
 #            : you do not need to include this flag when compiling on mac os x
 
 # serial code with optimizer turned on:
-# LINK = time g++ -O4
-
-# serial code with debugging options (this runs slow!)
-# LINK = time g++ -ggdb -DCHECK_BOUNDS
-
-#LINK = time g++ -O4
-LINK = time g++ -O4 -fopenmp -lgomp
-
-#LINK = time g++-4.7 -ggdb
+LINK = time g++
 
 # the following symbol is deprecated
 FFLAGS =  -c $(INCLUDE_LIBS)
