More work on 1D Euler.
The pictures for double-rarefaction look terrible.

--- a/apps/1d/euler/double_rarefaction/parameters.ini
+++ b/apps/1d/euler/double_rarefaction/parameters.ini
@@ -25,3 +25,5 @@ xlow  = -1.0e0 ; left end point
 xhigh =  1.0e0 ; right end point
 [euler]
 gamma = 1.4     ; gamma (gas constant)
+[weno]
+eps   = 1e-6
