--- a/apps/2d/euler/radial_shock/parameters.ini
+++ b/apps/2d/euler/radial_shock/parameters.ini
@@ -1,4 +1,4 @@
-; Parameters common to dogpack applications
+; Parameters common to all FINESS applications
 [finess]
 ndims       = 2         ; 1, 2, or 3
 nout        = 10        ; number of output times to print results
