Clean up code for 2D MHD rotated shock tube problem.

--- a/apps/2d/mhd/rotated_shock_tube/parameters.ini
+++ b/apps/2d/mhd/rotated_shock_tube/parameters.ini
@@ -4,13 +4,13 @@ space_order = 5
 mcapa = 0
 time_order = 3
 max_dt = 10000000000
-desired_cfl = 0.7
+desired_cfl = 0.50
 verbosity = 1
 meqn = 8
-time_stepping_method = Runge-Kutta
+time_stepping_method = Lax-Wendroff 
 output_dir = output
 maux = 1
-max_cfl = 0.7
+max_cfl = 0.51
 ndims = 2
 source_term = false
 tfinal = 0.2
@@ -23,7 +23,7 @@ gamma = 1.6666666666666667
 [grid]
 mx    =  180   ; number of grid elements in x-direction
 my    =  150
-mbc   =  5     ; number of ghost cells on each boundary
+mbc   =  7     ; number of ghost cells on each boundary
 xlow  = -1.2e0 ; left end point
 xhigh =  1.2e0 ; right end point
 ylow  = -1.0e0
@@ -55,3 +55,5 @@ angle = 0.52359877559 ; pi/6
 ;angle = 1.57079632679 ; pi/2
 ;angle = 0
 ;angle = 0.1
+
+;angle = 0.4636476090008061
