--- a/apps/2d/euler/mach_reflection/parameters.ini
+++ b/apps/2d/euler/mach_reflection/parameters.ini
@@ -5,16 +5,16 @@ nout        = 10        ; number of output times to print results
 tfinal      = 0.2       ; final time
 initial_dt  = 0.00001   ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 0.30      ; max allowable Courant number 1/(2k-1)
+max_cfl     = 0.30      ; max allowable Courant number
 desired_cfl = 0.25      ; desired Courant number
-nv          = 500000    ; max number of time steps per call to DogSolve
+nv          = 500000    ; max number of time steps per call to FinSolve
 time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
-space_order = 5  ; =method(1)= order of accuracy in space
-time_order  = 3  ; =method(2)= order of accuracy in time
-verbosity   = 1  ; =method(4)= verbosity of output
-mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
-maux        = 0  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
-source_term = false  ; =method(7)= source term (1-yes, 2-no)
+space_order = 5  ; order of accuracy in space
+time_order  = 3  ; order of accuracy in time
+verbosity   = 1  ; verbosity of output
+mcapa       = 0  ; mcapa (capacity function index in aux arrays)
+maux        = 0  ; maux (number of aux arrays, maux >= mcapa)
+source_term = false  ; source term (1-yes, 2-no)
 meqn        = 5  ; number of equations
 
 ; -------------------------------------------------
