--- a/apps/2d/euler/shock_diffraction/parameters.ini
+++ b/apps/2d/euler/shock_diffraction/parameters.ini
@@ -1,35 +1,27 @@
-; Parameters common to dogpack applications
+; Parameters common to FINESS applications
 [finess]
 ndims       = 2         ; 1, 2, or 3
 nout        = 16        ; number of output times to print results
 tfinal      = 2.3       ; final time
-;nout        = 1         ; number of output times to print results
-;tfinal      = 0.001     ; final time
-initial_dt      = 0.00001   ; initial dt
+initial_dt  = 0.00001   ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 0.40      ; max allowable Courant number 1/(2k-1)
-desired_cfl     = 0.30      ; desired Courant number
-nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, Lax-Wendroff)
-;time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
-space_order = 5  ; =method(1)= order of accuracy in space
-time_order  = 3  ; =method(2)= order of accuracy in time
-verbosity   = 1  ; =method(4)= verbosity of output
-mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
-maux        = 0  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
-source_term = false  ; =method(7)= source term (1-yes, 2-no)
+max_cfl     = 0.40      ; max allowable Courant number
+desired_cfl = 0.30      ; desired Courant number
+nv          = 500000    ; max number of time steps per call to FinSolve
+time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
+mpp_limiter = true ; flag for positivity preserving limiter
+space_order = 5  ; order of accuracy in space
+time_order  = 3  ; order of accuracy in time
+verbosity   = 1  ; verbosity of output
+mcapa       = 0  ; mcapa (capacity function index in aux arrays)
+maux        = 0  ; maux (number of aux arrays, maux >= mcapa)
+source_term = false ; source term (1-yes, 2-no)
 meqn        = 5  ; number of equations
-;mrestart    = 0  ; restart from old data (1-yes, 0-no)
-;;nstart      = 0  ; if ;mrestart==1: from file q(nstart)_restart.dat
-;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
-ic_quad_order = 20  ; order of quadrature for L2-projection of initial conditions
 
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
 [grid]
-;mx    = 1040 	; number of grid elements in x-direction
-;my    = 880     ; number of grid elements in y-direction
 mx    = 390     ; number of grid elements in x-direction
 my    = 330     ; number of grid elements in y-direction
 mbc   = 5       ; number of ghost cells on each boundary
@@ -45,5 +37,5 @@ yhigh = 11.0e0  ; upper end point
 gamma = 1.4     ; gas constant
 
 [weno]
-alpha_scaling = 1.0      ; scalling in alpha
-epsilon       = 1e-12    ; regularization parameter
+alpha_scaling = 1.1      ; scalling in alpha
+epsilon       = 1e-6     ; regularization parameter
