--- a/apps/3d/advection/smooth_example/parameters.ini
+++ b/apps/3d/advection/smooth_example/parameters.ini
@@ -17,7 +17,7 @@ maux        = 3   ; =method(6)= maux (number of aux arrays, maux >= mcapa)
 source_term = false   ; =method(7)= source term (1-yes, 0-no)
 meqn        = 1   ; number of equations
 output_dir  = output ; location of the output directory
-
+;datafmt = Silo
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
