papi counters work on linux mint 14

--- a/apps/2d/euler/mach_reflection/Makefile
+++ b/apps/2d/euler/mach_reflection/Makefile
@@ -8,6 +8,7 @@ include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 
 # overridden library objects
 #
+FinSolveUser    = $(FINESS)/lib/2d/FinSolveRK_PIF
 
 ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS)
 
