--- a/apps/2d/euler/mach_reflection/parameters.ini
+++ b/apps/2d/euler/mach_reflection/parameters.ini
@@ -8,21 +8,22 @@ max_dt      = 1.0e10    ; max allowable dt
 max_cfl     = 0.30      ; max allowable Courant number 1/(2k-1)
 desired_cfl = 0.25      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
-space_order = 5  ; =method(1)= order of accuracy in space
-time_order  = 3  ; =method(2)= order of accuracy in time
-verbosity   = 1  ; =method(4)= verbosity of output
-mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
-maux        = 0  ; =method(6)= maux (number of aux arrays, maux >= mcapa)
-source_term = false  ; =method(7)= source term (1-yes, 2-no)
+;time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, Lax-Wendroff)
+space_order = 5  ; order of accuracy in space
+time_order  = 4  ; order of accuracy in time
+verbosity   = 1  ; verbosity of output
+mcapa       = 0  ; mcapa (capacity function index in aux arrays)
+maux        = 0  ; maux (number of aux arrays, maux >= mcapa)
+source_term = false  ; source term (1-yes, 2-no)
 meqn        = 5  ; number of equations
 
 ; -------------------------------------------------
 ;   Grid data
 ; -------------------------------------------------
 [grid]
-mx    = 200 	; number of grid elements in x-direction
-my    =  50      ; number of grid elements in y-direction
+mx    = 2000	; number of grid elements in x-direction
+my    = 1000    ; number of grid elements in y-direction
 mbc   = 5       ; number of ghost cells on each boundary
 xlow  = 0.0e0   ; left end point
 xhigh = 3.2e0   ; right end point
