--- a/config/Makefile.config
+++ b/config/Makefile.config
@@ -38,9 +38,13 @@ USE_H5CPP = 0
 # LINK = time g++ -ggdb -DCHECK_BOUNDS
 
 #LINK = time g++ -O4
-LINK = time g++ -O4 -fopenmp -lgomp
+#LINK = time g++ -O4 -fopenmp -lgomp
 
 #LINK = time g++-4.7 -ggdb
+
+# PAPI FLAGS
+LINK = time g++ -O0
+
 
 # the following symbol is deprecated
 FFLAGS =  -c $(INCLUDE_LIBS)
