--- a/apps/1d/euler/double_rarefaction/parameters.ini
+++ b/apps/1d/euler/double_rarefaction/parameters.ini
@@ -5,8 +5,8 @@ nout        = 10        ; number of output times to print results
 tfinal      = 0.6       ; final time
 initial_dt  = 0.0005    ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 0.36      ; max allowable Courant number
-desired_cfl = 0.35      ; desired Courant number
+max_cfl     = 0.16      ; max allowable Courant number
+desired_cfl = 0.15      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 mpp_limiter = true ; flag for positivity preserving limiter
@@ -17,6 +17,7 @@ mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
 source_term = false ; source term (true or false)
 meqn        = 5   ; number of equations
+global_alpha = true  ; parameter for using a global value for alpha
 [grid]
 mx    = 400    ; number of grid elements in x-direction
 mbc   = 5      ; number of ghost cells on each boundary
