Remove some auto-generated files from repo.

--- a/apps/1d/euler/shock_tube/parameters.ini
+++ b/apps/1d/euler/shock_tube/parameters.ini
@@ -16,6 +16,7 @@ mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
 source_term = false ; source term (true or false)
 meqn        = 5   ; number of equations
+datafmt     = Silo
 [grid]
 mx    = 1000   ; number of grid elements in x-direction
 mbc   = 3     ; number of ghost cells on each boundary
