--- a/apps/2d/euler/riemann_test/parameters.ini
+++ b/apps/2d/euler/riemann_test/parameters.ini
@@ -16,6 +16,7 @@ mcapa       = 0      ; mcapa (capacity function index in aux arrays)
 maux        = 1      ; maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; source term (1-yes, 0-no)
 meqn        = 5      ; number of equations
+datafmt     = Silo
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
