--- a/apps/2d/euler/shock_diffraction/parameters.ini
+++ b/apps/2d/euler/shock_diffraction/parameters.ini
@@ -17,7 +17,7 @@ mcapa       = 0  ; mcapa (capacity function index in aux arrays)
 maux        = 0  ; maux (number of aux arrays, maux >= mcapa)
 source_term = false ; source term (1-yes, 2-no)
 meqn        = 5  ; number of equations
-
+datafmt     = Silo
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
