--- a/apps/2d/mhd/rotated_alfven/Makefile
+++ b/apps/2d/mhd/rotated_alfven/Makefile
@@ -8,6 +8,7 @@ include $(FINESS)/apps/2d/mhd/lib/Makefile.defs
 
 # overridden library objects
 AfterQinit = AfterQinit
+AfterStep = AfterStep
 # Hamilton-Jacobi rhs for magnetic potential
 
 ALL_OBJECTS = $(COMMON_OBJECTS) 
