--- a/apps/2d/mhd/rotated_alfven/hpcc/2DRK3CT/parameter_30deg_00.ini
+++ b/apps/2d/mhd/rotated_alfven/hpcc/2DRK3CT/parameter_30deg_00.ini
@@ -2,21 +2,21 @@
 initial_dt = 0.1
 space_order = 5
 mcapa = 0
-time_order = 3
+time_order = 4
 max_dt = 10000000000.0
-desired_cfl = 0.7
+desired_cfl = 3.0 
 verbosity = 1
 meqn = 8
 time_stepping_method = Runge-Kutta
 output_dir = output_30deg_00
 maux = 1
-max_cfl = 1.0
+max_cfl = 3.01
 ndims = 2
 source_term = false
-tfinal = 1.0
+tfinal = 0.0005
 nout = 1
 nv = 500000
-
+datafmt = Silo
 [mhd]
 gamma = 1.66666666667
 
@@ -24,6 +24,9 @@ gamma = 1.66666666667
 angle = 0.523598775598
 
 [grid]
-mx = 16
-mbc = 5
+mx = 4096
+mbc = 7
+
+[weno]
+weno_version = JS
 
