--- a/apps/3d/advection/smooth_example/parameters.ini
+++ b/apps/3d/advection/smooth_example/parameters.ini
@@ -1,8 +1,8 @@
 ; Parameters common to FINESS applications
 [finess]
 ndims       = 3          ; 1, 2, or 3
-nout        = 10         ; number of output times to print results
-tfinal      = 1.0        ; final time
+nout        = 100         ; number of output times to print results
+tfinal      = 10.0        ; final time
 initial_dt  = 1.00e-03   ; initial dt
 max_dt      = 1.0e10     ; max allowable dt 
 max_cfl     = 1.00       ; max allowable Courant number
@@ -17,7 +17,7 @@ maux        = 3   ; =method(6)= maux (number of aux arrays, maux >= mcapa)
 source_term = false   ; =method(7)= source term (1-yes, 0-no)
 meqn        = 1   ; number of equations
 output_dir  = output ; location of the output directory
-;datafmt = Silo
+datafmt = Silo
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
