--- a/apps/1d/burgers/sine_to_n/parameters.ini
+++ b/apps/1d/burgers/sine_to_n/parameters.ini
@@ -3,12 +3,13 @@
 ndims       = 1         ; 1, 2, or 3
 nout        = 10        ; number of output times to print results
 tfinal      = 1.591549430918953e-01 ; final time 
+;tfinal      =  0.3
 initial_dt  = 1.00e-03   ; initial dt
 max_dt      = 1.0e10     ; max allowable dt 
 max_cfl     = 0.84       ; max allowable Courant number
 desired_cfl = 0.50       ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5   ; order of accuracy in space
 time_order  = 3   ; order of accuracy in time
 verbosity   = 1   ; verbosity of output
@@ -16,7 +17,7 @@ mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
 source_term = false   ; source term (true or false)
 meqn        = 1   ; number of equations
-
+datafmt     = Silo
 [grid]
 mx    =    100   ; number of grid elements in x-direction
 mbc   =      5   ; number of ghost cells on each boundary
