--- a/apps/2d/euler/test_exact1/parameters.ini
+++ b/apps/2d/euler/test_exact1/parameters.ini
@@ -21,6 +21,7 @@ meqn        = 5   ; number of equations
 ;;nstart      = 0   ; if ;mrestart==1: from file q(nstart)_restart.dat
 ;datafmt     = 1   ; 1 for ascii, 5 for hdf5.
 ic_quad_order = 20  ; order of quadrature for L2-projection of initial conditions
+datafmt     = Silo
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
