--- a/apps/3d/euler/smooth/parameters.ini
+++ b/apps/3d/euler/smooth/parameters.ini
@@ -5,12 +5,12 @@ nout        = 1         ; number of output times to print results
 tfinal      = 0.5       ; final time
 initial_dt  = 0.001     ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 3.0      ; max allowable Courant number 1/(2k-1)
-desired_cfl = 2.0      ; desired Courant number
+max_cfl     = 0.7      ; max allowable Courant number 1/(2k-1)
+desired_cfl = 0.6      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5      ; order of accuracy in space
-time_order  = 4      ; order of accuracy in time
+time_order  = 3      ; order of accuracy in time
 verbosity   = 1      ; verbosity of output
 mcapa       = 0      ; mcapa (capacity function index in aux arrays)
 maux        = 0
@@ -25,7 +25,7 @@ global_alpha = true
 mx    =  65       ; number of grid elements in x-direction
 my    =  65       ; number of grid elements in y-direction
 mz    =  65       ; number of grid elements in z-direction
-mbc   =  3        ; number of ghost cells on each boundary
+mbc   =  6        ; number of ghost cells on each boundary
 xlow  =  0.0e0    ; left end point
 xhigh =  2.0e0    ; right end point
 ylow  =  0.0e0    ; lower end point
