--- a/config/Makefile.config
+++ b/config/Makefile.config
@@ -39,7 +39,9 @@ USE_H5CPP = 0
 
 #LINK = time g++ -O4
 LINK = time g++ -O4 -g -fopenmp
-LDFLAGS = -lgomp -lsiloh5
+#LINK = time g++ -Og -g
+#LINK = time g++ -g
+LDFLAGS = -lgomp -lsiloh5 
 
 #LINK = time g++ -O2 -g #-fopenmp -lgomp
 
