Positivity-preserving for 2D MHD.

--- a/apps/2d/mhd/lib/Makefile.defs
+++ b/apps/2d/mhd/lib/Makefile.defs
@@ -43,6 +43,8 @@ ConstructHJ_L = $(APP_LIB)/ConstructHJ_L
 # A more conservative way of computing CFL number
 GetCFL = $(APP_LIB)/GetCFL
 
+# Positivity-preserving limiter
+ApplyMPPLimiter2D   = $(APP_LIB)/ApplyMPPLimiter2D
 
 
 # place to add objects and sources
