--- a/apps/2d/mhd/vacuum_vortex/parameters.ini
+++ b/apps/2d/mhd/vacuum_vortex/parameters.ini
@@ -2,7 +2,7 @@
 [finess]
 ndims       = 2         ; 1, 2, or 3
 nout        = 20         ; number of output times to print results
-tfinal      = 20	; final time
+tfinal      = 4.0	; final time
 initial_dt      = 0.001  ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 0.51      ; max allowable Courant number 1/(2k-1)
@@ -17,10 +17,10 @@ maux        = 1  ; maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; source term (1-yes, 0-no)
 meqn        = 8  ; number of equations
 mpp_limiter = true
-datafmt     = Silo
+datafmt = Silo
 [grid]
-mx    =  128   ; number of grid elements in x-direction
-my    =  128
+mx    =  80   ; number of grid elements in x-direction
+my    =  80
 mbc   =  7      ; number of ghost cells on each boundary
 xlow  =  -10 ; left end point
 xhigh =  10 
@@ -30,5 +30,5 @@ yhigh =  10
 gamma = 1.6666666666666667   ; gamma (gas constant)
 
 [vortex]
-kappa = 1
-mu = 1
+kappa =  7.6218890589005219555
+mu = 5.3894894390001120144
