Fix bug in 2D rotated shock tube, SetBndValue.

--- a/apps/2d/mhd/rotated_shock_tube/parameters.ini
+++ b/apps/2d/mhd/rotated_shock_tube/parameters.ini
@@ -4,22 +4,23 @@ space_order = 5
 mcapa = 0
 time_order = 3
 max_dt = 10000000000
-desired_cfl = 0.50
+desired_cfl = 0.40
 verbosity = 1
 meqn = 8
 time_stepping_method = Lax-Wendroff 
 output_dir = output
 maux = 1
-max_cfl = 0.51
+max_cfl = 0.50
 ndims = 2
 source_term = false
 tfinal = 0.2
-nout = 1
+nout = 20 
 nv = 500000
-
+mpp_limiter = false 
+datafmt = Silo
 [mhd]
 gamma = 1.6666666666666667
-
+constrained_transport = true
 [grid]
 mx    =  180   ; number of grid elements in x-direction
 my    =  150
@@ -50,10 +51,10 @@ Bnr   =  0.75   ; normal magnetic field (on left side of jump)
 Btr   = -1.0   ; transverse magnetic field (on left side of jump)
 B3r   =  0.0   ; z-magnetic field (on left side of jump)
 
-angle = 0.52359877559 ; pi/6
+;angle = 0.52359877559 ; pi/6
 ;angle = 0.78539816339 ; pi/4
 ;angle = 1.57079632679 ; pi/2
 ;angle = 0
 ;angle = 0.1
 
-;angle = 0.4636476090008061
+angle = 0.4636476090008061
