added a fifth-order MSMD method: still has a bug in it

--- a/apps/1d/advection/smooth_example/Makefile
+++ b/apps/1d/advection/smooth_example/Makefile
@@ -11,7 +11,7 @@ include $(FINESS)/apps/1d/advection/lib/Makefile.defs
 # overridden library objects
 #
 #FinSolveUser           = $(FINESS)/lib/1d/FinSolveRK_PIF
-ConstructIntegratedF    = ConstructIntegratedF
+#ConstructIntegratedF    = ConstructIntegratedF
 FinSolveUser            = FinSolveUser
 
 # place to add object modules
