--- a/apps/3d/mhd/rotated_alfven/parameters.ini
+++ b/apps/3d/mhd/rotated_alfven/parameters.ini
@@ -5,15 +5,15 @@ nout        = 10         ; number of output times to print results
 tfinal      = 1.0       ; final time
 initial_dt  = 0.001     ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 3.01      ; max allowable Courant number 1/(2k-1)
-desired_cfl = 3.0      ; desired Courant number
+max_cfl     = 0.7      ; max allowable Courant number 1/(2k-1)
+desired_cfl = 0.6      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method =  Runge-Kutta    ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method =  Lax-Wendroff    ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5      ; order of accuracy in space
-time_order  = 4      ; order of accuracy in time
+time_order  = 3      ; order of accuracy in time
 verbosity   = 1      ; verbosity of output
 mcapa       = 0      ; mcapa (capacity function index in aux arrays)
-maux        = 0
+maux        = 3
 source_term = false  ; source term (1-yes, 0-no)
 meqn        = 8      ; number of equations
 datafmt = Silo
@@ -25,7 +25,7 @@ global_alpha = true
 mx    =  32       ; number of grid elements in x-direction
 my    =  64       ; number of grid elements in y-direction
 mz    =  64       ; number of grid elements in z-direction
-mbc   =  3        ; number of ghost cells on each boundary
+mbc   =  7        ; number of ghost cells on each boundary
 
 [mhd]
 gamma = 1.6666666666666667   ; gamma (gas constant)
@@ -33,4 +33,9 @@ gamma = 1.6666666666666667   ; gamma (gas constant)
 [initial]
 phi   = 0.46364760900080611621
 theta = 0.46364760900080611621
+
+[av]
+nu = 0.5
+delta = 1e-55 
+epsilon = 1e-8
 
