Fix and polish 2D MHD.
- Remove unnecessary files
- Remove unnecessary fabs from ProjectRightEig
- Add more accurate diagnostic message for positivity-preserving
  limiter
- Add (a little bit) cleaner convergence study code

--- a/apps/2d/mhd/rotated_alfven/convergence/parameter_30deg_03.ini
+++ b/apps/2d/mhd/rotated_alfven/convergence/parameter_30deg_03.ini
@@ -4,26 +4,30 @@ space_order = 5
 mcapa = 0
 time_order = 3
 max_dt = 10000000000.0
-desired_cfl = 0.7
+desired_cfl = 0.5
 verbosity = 1
 meqn = 8
-time_stepping_method = Runge-Kutta
-output_dir = output_89deg_00
+time_stepping_method = Lax-Wendroff
+output_dir = output_30deg_03
 maux = 1
-max_cfl = 1.0
+max_cfl = 0.51
 ndims = 2
 source_term = false
 tfinal = 1.0
 nout = 1
 nv = 500000
-
+datafmt = ASCII
+mpp_limiter = true
 [mhd]
 gamma = 1.66666666667
-
+constrained_transport = true
 [initial]
-angle = 1.55334303427
+angle = 0.523598775598
 
 [grid]
-mx = 16
+mx = 256
 mbc = 5
+
+[weno]
+weno_version = JS
 
