--- a/apps/2d/mhd/rotated_alfven/convergence/parameter_30deg_04.ini
+++ b/apps/2d/mhd/rotated_alfven/convergence/parameter_30deg_04.ini
@@ -4,26 +4,30 @@ space_order = 5
 mcapa = 0
 time_order = 3
 max_dt = 10000000000.0
-desired_cfl = 0.7
+desired_cfl = 0.5
 verbosity = 1
 meqn = 8
-time_stepping_method = Runge-Kutta
-output_dir = output_1deg_05
+time_stepping_method = Lax-Wendroff
+output_dir = output_30deg_04
 maux = 1
-max_cfl = 1.0
+max_cfl = 0.51
 ndims = 2
 source_term = false
 tfinal = 1.0
 nout = 1
 nv = 500000
-
+datafmt = ASCII
+mpp_limiter = true
 [mhd]
 gamma = 1.66666666667
-
+constrained_transport = true
 [initial]
-angle = 0.0174532925199
+angle = 0.523598775598
 
 [grid]
 mx = 512
 mbc = 5
+
+[weno]
+weno_version = JS
 
