--- a/apps/3d/mhd/shocktubeY/parameters.ini
+++ b/apps/3d/mhd/shocktubeY/parameters.ini
@@ -35,7 +35,7 @@ zhigh =   1.0e0    ; right end point
 
 [mhd]
 gamma = 1.6666666666666667   ; gamma (gas constant)
-
+constrained_transport = false
 ; -------------------------------------------------
 ;  Initial condition parameters
 ; -------------------------------------------------
