--- a/apps/1d/burgers/sine_to_n/Makefile
+++ b/apps/1d/burgers/sine_to_n/Makefile
@@ -8,6 +8,8 @@ include $(FINESS)/apps/1d/burgers/lib/Makefile.defs
 
 # overridden library objects
 #
+#FinSolveUser           = $(FINESS)/lib/1d/FinSolveRK_PIF
+FinSolveUser           = $(APP_LIB)/FinSolveDiffTransform
 
 # place to add object modules
 #
