--- a/apps/1d/burgers/sine_to_n/parameters.ini
+++ b/apps/1d/burgers/sine_to_n/parameters.ini
@@ -1,24 +1,33 @@
-; Parameters common to FINESS applications
+; Parameters common to finess applications
 [finess]
-ndims       = 1         ; 1, 2, or 3
-nout        = 10        ; number of output times to print results
-tfinal      = 1.591549430918953e-01 ; final time 
-initial_dt  = 1.00e-03   ; initial dt
-max_dt      = 1.0e10     ; max allowable dt 
-max_cfl     = 0.84       ; max allowable Courant number
-desired_cfl = 0.50       ; desired Courant number
+ndims       = 1             ; 1, 2 or 3
+nout        = 21            ; number of output times to print results
+;tfinal      = 1.591549430918953e-01 ; final time 
+tfinal      = 3.0           ; final time 
+initial_dt  = 1.0       ; initial dt
+max_dt      = 1.0e10    ; max allowable dt 
+max_cfl     = 1.00      ; max allowable Courant number
+desired_cfl = 0.3   ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5   ; order of accuracy in space
-time_order  = 3   ; order of accuracy in time
-verbosity   = 1   ; verbosity of output
-mcapa       = 0   ; mcapa (capacity function index in aux arrays)
-maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
-source_term = false   ; source term (true or false)
-meqn        = 1   ; number of equations
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+space_order = 5  ; order of accuracy in space
+time_order  = 5  ; order of accuracy in time
+meqn        = 1            ; number of equations
+verbosity   = 1            ; verbosity of output
+mcapa       = 0            ; mcapa (capacity function index in aux arrays)
+maux        = 0            ; maux (number of aux arrays, maux >= mcapa)
+source_term = false        ; source term (true or false)
+output_dir  = output       ; location of the output directory
+global_alpha = true        ; parameter for using a global value for alpha
 
 [grid]
-mx    =    100   ; number of grid elements in x-direction
+mx    =      100 ; number of grid elements in x-direction
 mbc   =      5   ; number of ghost cells on each boundary
 xlow  =  0.0e0   ; left end point
 xhigh =  2.0e0   ; right end point
+
+[weno]
+weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
+epsilon       = 1e-12  ; regulization parameter  ( epsilon > 0.0        )
+alpha_scaling = 1.1    ; scaling parameter       ( alpha_scaling >= 1.0 )
+
