--- a/lib/Makefile.defs
+++ b/lib/Makefile.defs
@@ -4,13 +4,11 @@ include $(FINESS)/lib/sys/Makefile.defs
 
 EXECUTABLE = finess.exe
 
-
-INIPARAMS = IniParams
-INIPARAMS_H = $(INIPARAMS).h
-INIPARAMS_CPP = $(INIPARAMS).cpp
+INIPARAMS       = IniParams
+INIPARAMS_H     = $(INIPARAMS).h
+INIPARAMS_CPP   = $(INIPARAMS).cpp
 
 GENERATE_INIPARAMS_PY = generate_iniparams.py
-
 
 # where this library lives
 TOPLIB = $(FINESS)/lib
@@ -25,6 +23,7 @@ TOPLIB_INCLUDE = -I$(TOPLIB) $(LIB_SYS_INCLUDE)
 MAIN_GLOBAL     = $(TOPLIB)/main_global
 RunStartScript  = $(TOPLIB)/RunStartScript
 WenoReconstruct = $(TOPLIB)/WenoReconstruct
+Quadrature      = $(TOPLIB)/Quadrature
 
 TOPLIB_OBJECTS = \
   $(LIB_SYS_OBJECTS) \
@@ -35,6 +34,7 @@ TOPLIB_OBJECTS = \
   $(TOPLIB)/dog_str.o \
   $(TOPLIB)/dog_io.o \
   $(WenoReconstruct).o \
+  $(Quadrature).o \
   $(RunStartScript).o \
 #
 TOPLIB_SOURCES = \
@@ -48,6 +48,7 @@ TOPLIB_SOURCES = \
   $(TOPLIB)/dog_str.cpp \
   $(TOPLIB)/dog_io.cpp \
   $(WenoReconstruct).cpp \
+  $(Quadrature).cpp \
   $(RunStartScript).cpp \
 
 # inheriting libraries and applications are expected to override these
